--- a/mlflow_with_keras.ipynb
+++ b/mlflow_with_keras.ipynb
@@ -85,22 +85,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To run the UI follow below steps\n",
+    "### To run the mlflow UI follow below steps\n",
     "\n",
-    "1- Open annaconda prompt\n",
+    "1- Open anaconda prompt\n",
     "\n",
-    "2- Activate environment variable (if you have created to run the code)\n",
+    "2- Activate environment variable (if you have created to run the code) (optional)\n",
     "\n",
     "3- type below code\n",
-    "    mlflow ui file:///complete_path_of_mlflow_directory\n",
     "\n",
-    "4- Once above step is complete, it will show one url as below\n",
+    "    mlflow ui file:///complete_path_of_your_mlflow_log_directory\n",
+    "\n",
+    "4- Once above step is complete, it will show one URL as below\n",
     "\n",
     "    http://127.0.0.1:5000/\n",
     "\n",
     "5- Copy the URL and open it in your browser\n",
     "\n",
-    "If everything went well then you can see all the prior experiment and loged artificats.\n"
+    "If everything went well then you can see all the prior experiments and logged artifacts."
    ]
   },
   {
