--- a/mlflow_with_keras.ipynb
+++ b/mlflow_with_keras.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# print input\n",
     "x = np.random.rand(100,5)\n",
     "y= np.random.rand(100,1)"
    ]
